# test-stack-nix

./: Main.hs  cabal.sandbox.config  shell.nix  stack.yaml  test-nix-glpk.cabal
